# Slang

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build-host.sh  build.sh  core  core.c  core.h  meson.build  meson_options.txt  slang-lib.h  slang.c  test  test.sh  tester.c
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  test1.yml
core/include/: buffer_core.h  core_types.h  function.h  interpreter.h  neostdlib.h  oscillator.h  parser.h  rack.h  tokenizer.h  tools.h  variable.h
core/src/: buffer_core.c  core.c  function.c  interpreter.c  parser.c  rack.c  tokenizer.c  tools.c
example/: test1.slang
examples/: README.md  basics.slang  dataInput.slang  filters.slang  fmsynth.slang  kick.slang  logic.slang  output_types.slang  randomstep.slang  reverb.slang  robot.slang  song1.slang  synths.slang  testcase.slang  tester.slang  volume.slang
modules/: modules.h
modules/data/include/: binaryData.h
modules/data/src/: binaryData.c
modules/envelope/include/: envelope.h  envelope_types.h
modules/envelope/src/: envelope.c  linenvelope.c
modules/filters/include/: filter.h  filter_types.h  lowpassfilter.h
modules/filters/src/: filter.c  lowpassfilter.c
modules/include/: binaryData.h  oscillator.h  sawtooth.h  wavetable.h
modules/modifier/include/: modifier.h  modifier_types.h
modules/modifier/src/: modifier.c
modules/oscillators/include/: oscillator.h  oscillator_types.h  random.h  sawtooth.h  sine.h  square.h  terrain.h  triangle.h  wavetable.h
modules/oscillators/src/: oscillator.c  random.c  sawtooth.c  sine.c  square.c  terrain.c  triangle.c  wavetable.c
modules/reverb/include/: reverb.h  reverb_types.h  springreverb.h
modules/reverb/src/: reverb.c  springreverb.c
modules/sample-source/include/: sample_source.h
modules/sample-source/src/: sample_source.c
modules/src/: binaryData.c  oscillator.c  square.c  wavetable.c
modules/stepsequencer/include/: randomstepsequencer.h  stepsequencer.h  stepsequencer_types.h
modules/stepsequencer/src/: randomstepsequencer.c  stepsequencer.c
slang-standalone-host/: SlangStandaloneHost.jucer
slang-standalone-host/Builds/LinuxMakefile/: Makefile
slang-standalone-host/JuceLibraryCode/: JuceHeader.h
slang-standalone-host/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
slang.dSYM/Contents/Resources/Relocations/aarch64/: slang.yml
